writing-a-c-compiler-tests/tests/chapter_9/valid/arguments_in_registers/expression_args.c
int sub(int a, int b) {
   
    return a - b;
}

int main(void) {
    
    int sum = sub(1 + 2, 1);
    return sum;
}
